--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,6 +16,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+           <ImageView
+               android:id="@+id/image_view"
+               android:scaleType="centerCrop"
+               android:src="@drawable/ic_image_black_24dp"
+               android:layout_width="50dp"
+               android:layout_height="50dp" />
+            <Button
+                android:id="@+id/capture_image_btn"
+                android:text="captture Image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textView"
