--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
 
+
+
+    bnjkbjk
+
+
+    
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="524dp"
