--- a/app/src/main/res/layout/activity_hospital_ui.xml
+++ b/app/src/main/res/layout/activity_hospital_ui.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HospitalUI">
+    tools:context=".activity.HospitalUI">
 
     <TextView
         android:id="@+id/editText"
