--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:background="@drawable/colours1"
-    tools:context=".SignUpActivity">
+    tools:context=".activity.SignUpActivity">
 
 
     <EditText
